# disco

./: .gitignore  .gitmodules  package-lock.json  package.json  pnpm-lock.yaml
.Jules/: palette.md
.husky/: post-checkout
.jules/: bolt.md
docs/: README.md  architecture.md  backend_api_reference.md  database.md  domain_model.md  frontend.md  frontend_component_reference.md  protocol_rich_content.md  vault_sync.md
scripts/: download_assets.sh  download_audio.sh  sync-crew.sh
src/: App.css  App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  benches.rs  encyclopedia.db  tauri.conf.json
src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs
src-tauri/src/commands/: common.rs  encyclopedia.rs  event.rs  figure.rs  geo.rs  institution.rs  school.rs  search.rs  terminal.rs  work.rs
src-tauri/src/core/: claude_bridge.rs  codex_bridge.rs  db.rs  domain.rs  gemini_bridge.rs  graph.rs  markdown.rs  vault.rs  watcher.rs
src-tauri/src/core/domain/: README.md  models.rs  traits.rs  values.rs
src-tauri/src/core/domain/models/: README.md  event.rs  figure.rs  geo.rs  institution.rs  school_of_thought.rs  work.rs
src-tauri/src/core/domain/values/: README.md  date_range.rs  entity_ref.rs  relation.rs  rich_content.rs  zeitgeist.rs
src-tauri/src/shared/: constants.rs
src/components/: DatePicker.tsx  SettingsUI.tsx
src/components/Layout/: Sidebar.tsx
src/features/crew/components/: CrewTerminal.tsx
src/features/encyclopedia/api/: index.ts
src/features/encyclopedia/components/: ContentEditableEditor.tsx  EntityConfig.ts  EntityCreate.tsx  EntityDetail.tsx  (+7 more)
src/hooks/: useEncyclopediaNavigation.ts  useFormState.ts
(+12 files in other folders)
