[package]
name = "dis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.43", features = ["serde"] }
petgraph = "0.8.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "7"
notify-debouncer-mini = "0.5"
serde_yaml = "0.9"
tauri-plugin-dialog = "2.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Development Build Size Optimizations ---
[profile.dev]
# Disable debug symbols to significantly reduce disk space usage
debug = 0
# Unpack debug info to avoid creating large combined dSYM bundles on macOS
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Slightly optimize dependencies and strip their debug information 
# (Dependencies rarely need step-through debugging)
opt-level = 1
debug = false
